<resources>
    <string name="app_name">On Spot !</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address" translatable="false">Email address</string>
    <string name="password">Password</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="saved">Saved</string>
    <string name="search_stain_type">Search stain type</string>
    <string name="stain_type">Stain Type</string>
    <string name="supplies"><b>Supplies: </b></string>
    <string name="recommended_for"><b>Recommended for: </b></string>
    <string name="ratings"><b> Ratings</b></string>
    <string name="sponge_bob">Sponge Bob</string>
    <string name="description"><b>Description: </b></string>
    <string name="add">Add</string>
    <string name="enter_supplies">Enter supplies</string>
    <string name="all">all</string>
    <string name="recommended_for_carpet_pants">Recommended for (carpet, pants...)</string>
    <string name="supplies_needed_water_soap_sponge">Supplies needed (water, soap, sponge...)</string>
    <string name="description_put_soap_on_the_stain">Description (put soap on the stain...)</string>
    <string name="saved_staintype_addmethod">Saved/StainType/addMethod</string>
    <string name="page_name">page name</string>
    <string name="saved_methods">Saved Methods</string>
</resources>