<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    android:layout_marginVertical="2dp"
    android:layout_marginHorizontal="12dp"
    android:elevation="14dp"
    app:cardElevation="14dp"
    app:cardBackgroundColor="@color/brown_100">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        android:layout_margin="14dp"
        android:elevation="12dp"
        app:cardElevation="12dp"
        app:cardBackgroundColor="@color/brown_200"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/method_LBL_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/method_IMG_favorite"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/stain_type"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/method_IMG_favorite"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                app:srcCompat="@drawable/save"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/method_LBL_supplies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/method_LBL_type"
                android:layout_alignStart="@id/method_LBL_type"
                android:layout_toStartOf="@+id/method_IMG_favorite"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/supplies"
                android:textSize="16sp"
                android:textColor="@color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/method_LBL_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/method_LBL_supplies"
                android:layout_alignStart="@id/method_LBL_type"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/recommended_for"
                android:textSize="16sp"
                android:textColor="@color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/method_LBL_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/method_LBL_recommended"
                android:layout_alignStart="@id/method_LBL_type"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/sponge_bob"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/method_LBL_ratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/method_RTG_rating"
                android:layout_alignBottom="@+id/method_RTG_rating"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/ratings"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/method_RTG_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/method_LBL_username"
                android:layout_alignParentStart="true"
                android:progressTint="@color/yellow_500"
                android:rating="3.5"
                android:secondaryProgressTint="@color/orange_500"
                android:stepSize="0.5"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:isIndicator="true"
                 />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>