<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.LaunchFragments.LoginFragment">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/login_IMG_logo"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="34dp"
            app:srcCompat="@drawable/on_spot_logo"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_LAY_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_IMG_logo"
            android:layout_marginTop="68dp"
            android:layout_marginHorizontal="26dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_ET_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_LAY_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_LAY_email"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="26dp"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_ET_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_BTN_login"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="126dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/orange_700"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/log_in"
            android:textSize="18sp"
            />
    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

</FrameLayout>